samples/_failures_safe/1761494914_d28002_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_091e7c23.c: In function ‘main’:
./samples/SAFE/__tmp_091e7c23.c:126:13: error: expected expression at end of input
  126 |             for (int i =
      |             ^~~
./samples/SAFE/__tmp_091e7c23.c:126:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_091e7c23.c:126:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_091e7c23.c:126:13: error: expected declaration or statement at end of input
